<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:text="@string/register_title"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_pseudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pseudo"/>
    <EditText
        android:id="@+id/et_Last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>
    <EditText
        android:id="@+id/et_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password2"/>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/backgrou_bouton"
        android:text="@string/register"
        android:textColor="#000000" />

    <ProgressBar
        android:id="@+id/pb_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="invisible" />


</LinearLayout>

